# e2e_ml_application

./: Makefile  README.md  model_query_example.py  pyproject.toml
deployment/dev/: Dockerfile_dagster_base  Dockerfile_dagster_user_code  Dockerfile_mlflow  Dockerfile_mlserver  compose.yaml  dagster.yaml  ml_flow_compose.yaml
deployment/stage/: compose.yaml
e2eML/clients/: __init__.py  mlserver.py
e2eML/inference/: image_classification.py  model-settings.json  settings.json
e2eML/ingest/: __init__.py  mnist.py
e2eML/models/: __init__.py  classifiers.py
e2eML/orchestrator/: definition.py
e2eML/pipeline_configs/: __init__.py
e2eML/train/: mnist.py
