[tool.poetry]
name = "e2eML"
version = "0.1.0"
description = "\"End to end machine learning pipeline.\""
authors = [
    "ChristianP <christian91mp@gmail.com>",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1.0.1"
pandas= "^2.2.2"
torch = "2.4.0"
scikit-learn = "^1.5.1"
dagster = "^1.8.0"
dagster-pandas = "^0.24.0"
dagster-graphql = "^1.8.0"
dagster-webserver = "^1.8.0"
dagster-mlflow = "^0.24.1"
dagster-postgres = "^0.24.0"
dagster-docker = "^0.24.0"
matplotlib = "^3.9.2"
torchvision = "^0.19.0"
mlflow = "^2.15.1"
boto3 = "^1.35.0"
torchmetrics = "^1.4.1"
psutil = "^6.0.0"
mlserver = "^1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "e2eML.orchestrator.definition"
code_location_name = "tutorial"